@@ -1,3 +1,8 @@
+2007-06-28  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>
+
+	* macterm.c [USE_MAC_TSM] (mac_handle_text_input_event):
+	Check WINDOWP before using XWINDOW.  Consolidate return statements.
+
 2007-06-27  Richard Stallman  <rms@gnu.org>
 
 	* fileio.c (syms_of_fileio) <after-insert-file-functions>: Doc fix.
